did some css fixes - wrapping countainer takes up full vh. looks better

--- a/src/components/BattleField.css
+++ b/src/components/BattleField.css
@@ -107,6 +107,7 @@
 }
 
 .playerScore {
+    align-self: end;
     grid-area: playerScore;
 }
 
